--- a/pokeWeb/style.css
+++ b/pokeWeb/style.css
@@ -8,12 +8,16 @@ body {
     align-items: center;
     flex-wrap: wrap;
   }
+  #cartBody{
+    background-color: aliceblue;
+  }
   
   .pokemon {
     width: 100px;
     margin: 10px;
     padding: 10px;
     background-color: #fff;
+    border: 2px, solid;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
